--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ html,
   -o-tab-size: 4;
      tab-size: 4;
   /* 3 */
-  font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: Prompt, san-serif;
   /* 4 */
   font-feature-settings: normal;
   /* 5 */
@@ -668,14 +668,14 @@ video {
   color: rgb(51 51 51 / var(--tw-text-opacity));
 }
 
-.text-\[\#ff4500\] {
+.text-orange {
   --tw-text-opacity: 1;
-  color: rgb(255 69 0 / var(--tw-text-opacity));
+  color: hsl(16 100% 50% / var(--tw-text-opacity));
 }
 
-.hover\:text-\[\#ff4500\]:hover {
+.hover\:text-orange:hover {
   --tw-text-opacity: 1;
-  color: rgb(255 69 0 / var(--tw-text-opacity));
+  color: hsl(16 100% 50% / var(--tw-text-opacity));
 }
 
 @media (min-width: 1024px) {
