--- a/css/style.css
+++ b/css/style.css
@@ -605,12 +605,28 @@ video {
   margin-bottom: 6rem;
 }
 
+.-mt-20 {
+  margin-top: -5rem;
+}
+
 .flex {
   display: flex;
 }
 
 .hidden {
   display: none;
+}
+
+.w-full {
+  width: 100%;
+}
+
+.max-w-4xl {
+  max-width: 56rem;
+}
+
+.flex-1 {
+  flex: 1 1 0%;
 }
 
 .flex-col {
@@ -623,6 +639,10 @@ video {
 
 .items-center {
   align-items: center;
+}
+
+.justify-end {
+  justify-content: flex-end;
 }
 
 .justify-between {
@@ -653,12 +673,49 @@ video {
   margin-bottom: calc(2.5rem * var(--tw-space-y-reverse));
 }
 
+.space-y-6 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
+}
+
+.space-y-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
+
+.space-x-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1rem * var(--tw-space-x-reverse));
+  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-y-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
+
 .rounded {
   border-radius: 0.25rem;
 }
 
 .rounded-md {
   border-radius: 0.375rem;
+}
+
+.border {
+  border-width: 1px;
+}
+
+.border-2 {
+  border-width: 2px;
+}
+
+.border-orange {
+  --tw-border-opacity: 1;
+  border-color: hsl(16 100% 50% / var(--tw-border-opacity));
 }
 
 .bg-\[\#111\] {
@@ -671,8 +728,26 @@ video {
   background-color: hsl(0 0% 6% / var(--tw-bg-opacity));
 }
 
+.bg-greyLight {
+  --tw-bg-opacity: 1;
+  background-color: hsl(0 0% 93% / var(--tw-bg-opacity));
+}
+
+.bg-orange {
+  --tw-bg-opacity: 1;
+  background-color: hsl(16 100% 50% / var(--tw-bg-opacity));
+}
+
 .p-6 {
   padding: 1.5rem;
+}
+
+.p-10 {
+  padding: 2.5rem;
+}
+
+.p-3 {
+  padding: 0.75rem;
 }
 
 .px-8 {
@@ -693,6 +768,11 @@ video {
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .text-center {
@@ -720,6 +800,14 @@ video {
 
 .font-bold {
   font-weight: 700;
+}
+
+.font-semibold {
+  font-weight: 600;
+}
+
+.font-medium {
+  font-weight: 500;
 }
 
 .text-\[\#111\] {
@@ -752,6 +840,36 @@ video {
   color: hsl(0 0% 93% / var(--tw-text-opacity));
 }
 
+.placeholder-orange::-moz-placeholder {
+  --tw-placeholder-opacity: 1;
+  color: hsl(16 100% 50% / var(--tw-placeholder-opacity));
+}
+
+.placeholder-orange::placeholder {
+  --tw-placeholder-opacity: 1;
+  color: hsl(16 100% 50% / var(--tw-placeholder-opacity));
+}
+
+.placeholder-orangeLight::-moz-placeholder {
+  --tw-placeholder-opacity: 1;
+  color: hsl(39 100% 50% / var(--tw-placeholder-opacity));
+}
+
+.placeholder-orangeLight::placeholder {
+  --tw-placeholder-opacity: 1;
+  color: hsl(39 100% 50% / var(--tw-placeholder-opacity));
+}
+
+.placeholder-greyMedium::-moz-placeholder {
+  --tw-placeholder-opacity: 1;
+  color: hsl(0 0% 20% / var(--tw-placeholder-opacity));
+}
+
+.placeholder-greyMedium::placeholder {
+  --tw-placeholder-opacity: 1;
+  color: hsl(0 0% 20% / var(--tw-placeholder-opacity));
+}
+
 .hover\:text-orange:hover {
   --tw-text-opacity: 1;
   color: hsl(16 100% 50% / var(--tw-text-opacity));
@@ -766,9 +884,43 @@ video {
   opacity: 0.7;
 }
 
+.focus\:outline-none:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
 @media (min-width: 768px) {
+  .md\:flex {
+    display: flex;
+  }
+
   .md\:w-180 {
     width: 32rem;
+  }
+
+  .md\:flex-row {
+    flex-direction: row;
+  }
+
+  .md\:space-y-0 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 0;
+    margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(0px * var(--tw-space-y-reverse));
+  }
+
+  .md\:space-x-3 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(0.75rem * var(--tw-space-x-reverse));
+    margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .md\:py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+
+  .md\:text-left {
+    text-align: left;
   }
 }
 
